--- a/src/components/Item.scss
+++ b/src/components/Item.scss
@@ -9,10 +9,41 @@ figure.chela-item {
   box-shadow: 0 0 0 5px rgba(0,0,0,0.03);
 
   div.image-wrapper {
-    // position: relative;
+    position: relative;
 
     img {
       width: 100%;
+    }
+
+    .likes-animation {
+      background: url(https://emojipedia-us.s3.amazonaws.com/thumbs/120/microsoft/106/clinking-beer-mugs_1f37b.png) center no-repeat;
+      background-size: contain;
+      font-size: 1.2rem;
+      padding: 1rem;
+      position: absolute;
+      color: #000000;
+      left: 50%;
+      top: 50%;
+      pointer-events: none;
+
+      opacity: 0;
+      transition: all 0.5s;
+      transform: translateX(-50%) translateY(-50%) scale(5);
+      display: block;
+
+      &.like-enter {
+        transition: all 0.2s;
+        transform: translateX(-50%) translateY(-50%) scale(1);
+        opacity: 1;
+
+        &.like-enter-active {
+          transform: translateX(-50%) translateY(-50%) scale(5);
+        }
+      }
+
+      &.like-leave-active {
+        display: none;
+      }
     }
   }
 
@@ -21,9 +52,9 @@ figure.chela-item {
 
     div.actions {
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
 
-      button {
+      button, .button {
         border: 2px solid #f2f2f2;
         background: none;
         flex-basis: 48%;
@@ -42,8 +73,4 @@ figure.chela-item {
       }
     }
   }
-
-  // figure
-    // img
-  // figcaption
 }
