--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -15,27 +15,39 @@ div.header-wrapper {
     align-items: center;
     height: 100%;
     text-decoration: none; }
-    div.header-wrapper a.header img {
+    div.header-wrapper a.header img.logo {
       height: 80%;
       animation: beerjs-logo-animation infinite 2s linear; }
-    div.header-wrapper a.header div.logo {
-      font-size: 6rem;
-      font-family: 'Seymour One', sans-serif;
-      color: #ffffff;
-      margin: 0;
-      height: 100%;
+    div.header-wrapper a.header .content {
       display: flex;
-      flex-direction: row;
-      justify-content: center;
+      flex-direction: column;
       align-items: center; }
-      div.header-wrapper a.header div.logo span {
-        display: inline-block;
-        transition: all 0.2s; }
-        div.header-wrapper a.header div.logo span:hover {
-          transform: scale(1.3) rotate(-10deg); }
-        div.header-wrapper a.header div.logo span:hover:last-child {
-          transform: scale(2) rotate(10deg);
-          color: #F9E034; }
+      div.header-wrapper a.header .content .title {
+        font-size: 5rem;
+        font-weight: 100;
+        color: #fff;
+        letter-spacing: -1px;
+        margin: 0;
+        padding: 0;
+        line-height: 1;
+        text-shadow: 3px 3px 0 rgba(0, 0, 0, 0.15);
+        position: relative;
+        z-index: 2;
+        display: block;
+        font-family: 'Seymour One', sans-serif; }
+        div.header-wrapper a.header .content .title span {
+          display: inline-block;
+          transition: all 0.2s; }
+          div.header-wrapper a.header .content .title span:hover {
+            transform: scale(1.3) rotate(-10deg); }
+          div.header-wrapper a.header .content .title span:hover:last-child {
+            transform: scale(2) rotate(10deg);
+            color: #F9E034; }
+      div.header-wrapper a.header .content .subtitle {
+        display: block;
+        color: #fff;
+        font-family: 'Seymour One', sans-serif;
+        font-size: 2.5rem; }
 
 @keyframes beerjs-logo-animation {
   0% {
